fix: blurry bug

--- a/GaiaXAndroidDemo/app/src/main/assets/assets_data_source/templates/gx-style-backdrop-filter/index.css
+++ b/GaiaXAndroidDemo/app/src/main/assets/assets_data_source/templates/gx-style-backdrop-filter/index.css
@@ -14,8 +14,8 @@
 }
 #blur_view {
   backdrop-filter:blur(10px);
-  width: 200px;
-  height: 50px;
+  width: 300px;
+  height: 100px;
   justify-content: center;
   align-items: center;
   border-radius: 25px;
@@ -24,7 +24,7 @@
   width: 100%;
   text-overflow: ellipsis;
   height: 100%;
-  color: #000000;
+  color: #FFFFFF;
   font-size: 15px;
   padding-left: 12px;
   padding-right: 12px;
